--- a/.github/workflows/master_uccd2223-assignment.yml
+++ b/.github/workflows/master_uccd2223-assignment.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - uccd2223-assignment
 
 on:
@@ -24,6 +21,7 @@ jobs:
           node-version: '22.x'
 
       - name: npm install, build, and test
+        working-directory: ./FRONT END PROJECT
         run: |
           npm install
           npm run build --if-present
@@ -33,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: ./FRONT END PROJECT
 
   deploy:
     runs-on: ubuntu-latest
@@ -62,4 +60,3 @@ jobs:
           app-name: 'uccd2223-assignment'
           slot-name: 'Production'
           package: .
-          
