--- a/.github/workflows/master_uccd2223-assignment.yml
+++ b/.github/workflows/master_uccd2223-assignment.yml
@@ -1,50 +1,31 @@
-name: Build and deploy Node.js app to Azure Web App - uccd2223-assignment
-
-on:
-  push:
-    branches:
-      - master
-  workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
-        with:
-          node-version: '22.x'
-
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-
-      - name: Upload artifact for deployment job
+      - name: Archive Web Content
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: .
+          name: web-app-content
+          path: . # <-- Upload the ENTIRE repository content, as index.html and assets are at root
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - name: Download artifact from build job
+      - name: Download Web Content artifact
         uses: actions/download-artifact@v4
         with:
-          name: node-app
-          path: ./app   # ⬅️ extract into ./app
+          name: web-app-content
+          path: ./site_root # <-- Download into a temporary folder named 'site_root'
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -59,4 +40,4 @@ jobs:
         with:
           app-name: 'uccd2223-assignment'
           slot-name: 'Production'
-          package: ./app   # ⬅️ deploy the extracted artifact
+          package: ./site_root # <-- Deploy the contents of the 'site_root' folder
